--- a/src/Pages/Students/StudentCourseRegistration/StudentCourseRegistrationDetails/CourseRegistrationView/AdmitCard.css
+++ b/src/Pages/Students/StudentCourseRegistration/StudentCourseRegistrationDetails/CourseRegistrationView/AdmitCard.css
@@ -1,13 +1,11 @@
 ol {
-
     columns: 4;
-
     -webkit-columns: 4;
-
     -moz-columns: 4;
-
     margin-left: 8px;
-
     padding: 5px;
+}
 
+.font-style-work-sans {
+    font-family: 'Work Sans', sans-serif;
 }
