--- a/src/Pages/Teacher/ExamCommitteeChairman/MarksSheet/MarksSheet.css
+++ b/src/Pages/Teacher/ExamCommitteeChairman/MarksSheet/MarksSheet.css
@@ -1,3 +1,13 @@
 .download-pdf:hover {
     cursor: pointer;
 }
+
+/* .display-tr {
+    display: flex;
+}
+
+.display-td {
+    width: 50%;
+    border-right: none;
+    border-bottom: none;
+} */
