--- a/src/Pages/Dashboard/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard/Dashboard.css
@@ -15,3 +15,10 @@
 .bg-own {
     background-color: #212529 !important;
 }
+
+.dashboard-img-style {
+    width: 100px;
+    height: 100px;
+    border: 3px solid #5f6369;
+    border-radius: 50%;
+}
